--- a/babel.config.json
+++ b/babel.config.json
@@ -1,5 +1,10 @@
 {
   "presets": [
     "@babel/preset-typescript"
+  ],
+  "plugins": [
+    "@babel/plugin-proposal-object-rest-spread",
+    "@babel/plugin-transform-async-to-generator",
+    "@babel/plugin-proposal-class-properties"
   ]
 }
