--- a/package.json
+++ b/package.json
@@ -1,20 +1,24 @@
 {
   "name": "fictio",
   "version": "1.0.0",
-  "description": "",
+  "description": "Random fictional names generator using Markov chain written in Typescript.",
   "main": "dist/index.js",
-  "type": "dist/index.d.ts",
+  "types": "dist/generate/Generator.d.ts",
   "module": "src/generate/Generator.ts",
+  "files": ["dist/**/*"],
   "engines": {
     "node": ">=10"
   },
   "scripts": {
-    "start": "webpack --mode=production && node ./dist/build.js",
+    "build:types": "tsc --emitDeclarationOnly -p tsconfig.build.json",
+    "build:js": "webpack --mode=production",
+    "build": "npm run build:types && npm run build:js",
+    "example": "npm run build && node ./dist/example-build.js",
     "test": "jest"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "keywords": ["fictional", "names", "generator", "markov", "chains"],
+  "author": "Adrian Toșcă",
+  "license": "MIT",
   "devDependencies": {
     "@babel/cli": "^7.10.5",
     "@babel/core": "^7.11.1",
